pkp/pkp-lib#6495 Fix incorrectly formatted default setting URLs

--- a/locale/da_DK/default.po
+++ b/locale/da_DK/default.po
@@ -161,11 +161,11 @@ msgstr ""
 msgid "default.contextSettings.forAuthors"
 msgstr ""
 "Er du interesseret i at fremsende et manuskript til dette forlag? Vi "
-"anbefaler, at du gennemgår siden <a href=\"{$indexUrl}{$contextPath}/about\">"
+"anbefaler, at du gennemgår siden <a href=\"{$indexUrl}/{$contextPath}/about\">"
 "Om forlaget</a>, hvor du kan finde forlagets sektionspolitikker, samt <a "
-"href=\"{$indexUrl}{$contextPath}/about/submissions#authorGuidelines\">"
+"href=\"{$indexUrl}/{$contextPath}/about/submissions#authorGuidelines\">"
 "Retningslinjer for forfattere</a>. Forfattere skal <a href=\""
-"{$indexUrl}{$contextPath}/user/register\">tilmelde sig</a> forlaget, inden "
+"{$indexUrl}/{$contextPath}/user/register\">tilmelde sig</a> forlaget, inden "
 "de kan fremsende et manuskript. Hvis de allerede er tilmeldt, kan de blot <a "
 "href=\"{$indexUrl}/index/login\">logge på</a> og påbegynde processen, der "
 "består af 5 trin."
@@ -174,7 +174,7 @@ msgid "default.contextSettings.forReaders"
 msgstr ""
 "Vi opfordrer læsere til at tilmelde sig nyhedstjenesten vedrørende "
 "publiceringer fra dette forlag. Brug linket <a href=\""
-"{$indexUrl}{$contextPath}/user/register\">Registrer</a> øverst på forlagets "
+"{$indexUrl}/{$contextPath}/user/register\">Registrer</a> øverst på forlagets "
 "hjemmeside. Denne registrering medfører, at læseren via e-mail modtager "
 "indholdsfortegnelsen fra hver ny monografi. Denne liste giver også forlaget "
 "mulighed for at hævde at have et vist supportniveau eller et vist antal "
