--- a/locale/nb_NO/default.po
+++ b/locale/nb_NO/default.po
@@ -32,7 +32,7 @@ msgstr ""
 msgid "default.contextSettings.forAuthors"
 msgstr ""
 "Er du interessert i å sende inn en innlevering til denne utgiveren? Vi "
-"anbefaler at du går gjennom siden <a href=\"{$indexUrl}{$contextPath}/about\""
+"anbefaler at du går gjennom siden <a href=\"{$indexUrl}/{$contextPath}/about\""
 "> Om utgiveren </a>, der du finner retningslinjene for utgiverens seksjoner, "
 "samt <a href = \"{$indexUrl}/{$contextPath}/about/submissions#"
 "authorGuidelines\">Retningslinjer for forfattere</a>. Forfattere må <a href="
