--- a/locale/ru_RU/default.po
+++ b/locale/ru_RU/default.po
@@ -118,11 +118,11 @@ msgstr ""
 msgid "default.contextSettings.forAuthors"
 msgstr ""
 "Вы хотите отправить материал для публикации в нашем Издательстве? "
-"Рекомендуем вам посмотреть раздел <a href=\"{$indexUrl}{$contextPath}/about\""
+"Рекомендуем вам посмотреть раздел <a href=\"{$indexUrl}/{$contextPath}/about\""
 ">«Об Издательстве»</a>, где вы сможете ознакомиться с нашей редакционной "
-"политикой, а также с <a href=\"{$indexUrl}{$contextPath}/about/submissions#"
+"политикой, а также с <a href=\"{$indexUrl}/{$contextPath}/about/submissions#"
 "authorGuidelines\">Руководством для автора</a>. Авторам нужно <a href=\""
-"{$indexUrl}{$contextPath}/user/register\">зарегистрироваться</a> в журнале "
+"{$indexUrl}/{$contextPath}/user/register\">зарегистрироваться</a> в журнале "
 "перед отправкой материалов, или, если вы уже зарегистрированы, можно просто <"
 "a href=\"{$indexUrl}/index/login\">войти</a> со своей учетной записью и "
 "начать процесс отправки, состоящий из пяти шагов."
@@ -131,11 +131,11 @@ msgid "default.contextSettings.forReaders"
 msgstr ""
 "Мы прeдлагаем читателям зарегистрироваться на сайте, чтобы пользоваться "
 "службой сообщений нашего издательства. Используйте ссылку <a href=\""
-"{$indexUrl}{$contextPath}/user/register\">РЕГИСТРАЦИЯ</a> в верхней части "
+"{$indexUrl}/{$contextPath}/user/register\">РЕГИСТРАЦИЯ</a> в верхней части "
 "главной страницы Издательства. Эта регистрация позволит читателю получать на "
 "электронную почту содержание новых опубликованных изданий. Этот список также "
 "позволяет журналу говорить об определенном уровне поддержки или количестве "
-"читателей. Посмотрите также страницу <a href=\"{$indexUrl}{$contextPath}/"
+"читателей. Посмотрите также страницу <a href=\"{$indexUrl}/{$contextPath}/"
 "about/submissions#privacyStatement\">Заявление о конфиденциальности</a>, "
 "которая позволяет читателям убедиться в том, что их имя и адрес электронной "
 "почты не будут использованы для других целей."
