--- a/locale/sv_SE/default.po
+++ b/locale/sv_SE/default.po
@@ -147,11 +147,11 @@ msgstr ""
 msgid "default.contextSettings.forAuthors"
 msgstr ""
 "Är du intresserad av att skicka in ett bidrag till den här pressen? Då "
-"rekommenderar vi att du läser igenom <a href=\"{$indexUrl}{$contextPath}/"
+"rekommenderar vi att du läser igenom <a href=\"{$indexUrl}/{$contextPath}/"
 "about\">Om pressen</a>-sidan för att få en uppfattning om pressens "
-"sektionspolicyer, samt <a href=\"{$indexUrl}{$contextPath}/about/submissions#"
+"sektionspolicyer, samt <a href=\"{$indexUrl}/{$contextPath}/about/submissions#"
 "authorGuidelines\">Riktlinjer för författare</a>. För att skicka in ett "
-"bidrag måste du som författare <a href=\"{$indexUrl}{$contextPath}/user/"
+"bidrag måste du som författare <a href=\"{$indexUrl}/{$contextPath}/user/"
 "register\">registrera dig</a> hos pressen. Om du redan har ett konto kan du "
 "bara <a href=\"{$indexUrl}/index/login\">logga in</a> och påbörja processen, "
 "som består av fem steg."
@@ -159,11 +159,11 @@ msgstr ""
 msgid "default.contextSettings.forReaders"
 msgstr ""
 "Vi uppmuntrar våra läsare att registrera sig för att få aviseringar från den "
-"här pressen. Använd <a href=\"{$indexUrl}{$contextPath}/user/register\">"
+"här pressen. Använd <a href=\"{$indexUrl}/{$contextPath}/user/register\">"
 "Registrera dig</a>-länken överst på pressens webbsida. Genom att registrera "
 "sig där kan du som läsare få ett e-postmeddelande med innehållsförteckning "
 "för varje nytt bok som publiceras. Listan gör också att pressen kan peka på "
-"ett visst läsarunderlag. Se pressens <a href=\"{$indexUrl}{$contextPath}/"
+"ett visst läsarunderlag. Se pressens <a href=\"{$indexUrl}/{$contextPath}/"
 "about/submissions#privacyStatement\">Integritetspolicy</a>, som försäkrar "
 "dig som läsare att ditt namn eller e-postadress inte kommer användas för "
 "andra syften."
