--- a/locale/uk_UA/default.po
+++ b/locale/uk_UA/default.po
@@ -99,10 +99,10 @@ msgid "default.contextSettings.forAuthors"
 msgstr ""
 "Бажаєте опублікувати свою роботу у цьому видавництві? Рекомендуємо "
 "ознайомитись з нашою редакційною політикою на сторінці <a href=\""
-"{$indexUrl}{$contextPath}/about\">Про Видавництво</a> та переглянути <a href="
-"\"{$indexUrl}{$contextPath}/about/submissions#authorGuidelines\">Керівництво "
+"{$indexUrl}/{$contextPath}/about\">Про Видавництво</a> та переглянути <a href="
+"\"{$indexUrl}/{$contextPath}/about/submissions#authorGuidelines\">Керівництво "
 "для авторів</a>. Для того, щоб мати можливість подавати рукописи до нашого "
-"видавництва, автори повинні <a href=\"{$indexUrl}{$contextPath}/user/"
+"видавництва, автори повинні <a href=\"{$indexUrl}/{$contextPath}/user/"
 "register\">зареєструватися</a> на сайті видавництва. Якщо Ви вже "
 "зареєстровані, просто <a href=\"{$indexUrl}/index/login\">увійдіть на "
 "сайт</a> та пройдіть 5 кроків подання рукопису на розгляд."
@@ -111,12 +111,12 @@ msgid "default.contextSettings.forReaders"
 msgstr ""
 "Ми пропонуємо авторам реєструватися на сайті, щоб скористатись службою "
 "повідомлень цього видавництва. Для реєстрації використайте посилання <a href="
-"\"{$indexUrl}{$contextPath}/user/register\">Зареєструватися</a> у верхньому "
+"\"{$indexUrl}/{$contextPath}/user/register\">Зареєструватися</a> у верхньому "
 "меню домашньої сторінки сайту видавництва. У Вас буде можливість оперативно "
 "отримувати поштою сторінки змісту нових опублікованих монографій нашого "
 "видавництва, та дозволите редакції відстежувати читацькі пріоритети та "
 "інтереси. Будь ласка, ознайомтеся з нашим <a href=\""
-"{$indexUrl}{$contextPath}/about/submissions#privacyStatement\">Положенням "
+"{$indexUrl}/{$contextPath}/about/submissions#privacyStatement\">Положенням "
 "про конфіденційність</a>, у якому йдеться про те, що видавництво гарантує "
 "нерозповсюдження імен та електронних адрес своїх читачів стороннім особам."
 
