--- a/locale/en_US/admin.po
+++ b/locale/en_US/admin.po
@@ -77,6 +77,9 @@ msgstr "The path can only include letters, numbers and the characters _ and -. I
 msgid "admin.contexts.form.pathExists"
 msgstr "The selected path is already in use by another press."
 
+msgid "admin.contexts.form.primaryLocaleNotSupported"
+msgstr "The primary locale must be one of the press's supported locales."
+
 msgid "admin.contexts.form.create.success"
 msgstr "{$name} was created successfully."
 
