--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -1108,8 +1108,8 @@ msgstr "Export Submissions"
 msgid "plugins.importexport.common.cliError"
 msgstr "ERROR:"
 
-msgid "plugins.importexport.common.error.unknownJournal"
-msgstr "The specified journal path, \"{$journalPath}\", does not exist."
+msgid "plugins.importexport.common.error.unknownContext"
+msgstr "The specified context path, \"{$contextPath}\", does not exist."
 
 msgid "plugins.importexport.common.error.unknownObjects"
 msgstr "The specified objects could not be found."
