pkp/pkp-lib#6536 Add locale keys for notify restrictions

--- a/locale/en_US/admin.po
+++ b/locale/en_US/admin.po
@@ -93,3 +93,24 @@ msgid "admin.overwriteConfigFileInstructions"
 msgstr ""
 "<h4>NOTE!</div>\n"
 "<p>The system could not automatically overwrite the configuration file. To apply your configuration changes you must open <tt>config.inc.php</tt> in a suitable text editor and replace its contents with the contents of the text field below.</p>"
+
+msgid "admin.settings.enableBulkEmails.description"
+msgstr ""
+"Select the hosted presses that should be allowed to send bulk emails. When this feature is enabled, "
+"a press manager will be able to send an email to all users registered with their press."
+"<br><br>"
+"Misuse of this feature to send unsolicited email may violate anti-spam laws in some jurisdictions and "
+"may result in your server's emails being blocked as spam. Seek technical advice before "
+"enabling this feature and consider consulting with press managers to ensure it is used appropriately."
+"<br><br>"
+"Further restrictions on this feature can be enabled for each press by visiting its settings wizard in "
+"the list of <a href=\"{$hostedContextsUrl}\">Hosted Presses</a>."
+
+msgid "admin.settings.disableBulkEmailRoles.description"
+msgstr ""
+"A press manager will be unable to send bulk emails to any of the roles selected below. Use this setting to limit abuse of the email notification feature. For example, it may be safer to disable bulk emails to readers, authors, or other large user groups that have not consented to receive such emails."
+"<br><br>"
+"The bulk email feature can be disabled completely for this press in <a href=\"{$siteSettingsUrl}\">Admin > Site Settings</a>."
+
+msgid "admin.settings.disableBulkEmailRoles.contextDisabled"
+msgstr "The bulk email feature has been disabled for this press. Enable this feature in <a href=\"{$siteSettingsUrl}\">Admin > Site Settings</a>."
