--- a/locale/en_US/api.po
+++ b/locale/en_US/api.po
@@ -17,6 +17,9 @@ msgstr "You must provide one or more submission ids to be added to the catalog."
 msgid "api.submissions.400.submissionsNotFound"
 msgstr "One or more of the submissions you specified could not be found."
 
+msgid "api.emails.403.disabled"
+msgstr "The email notification feature has not been enabled for this press."
+
 msgid "api.emailTemplates.403.notAllowedChangeContext"
 msgstr "You do not have permission to move this email template to another press."
 
