--- a/docs/release-notes/README-3.2.1
+++ b/docs/release-notes/README-3.2.1
@@ -4,6 +4,35 @@ Git tag: 3_2_1-2
 Release date: November 13, 2020
 ===============================
 
+See config.TEMPLATE.inc.php for a description and examples of all supported
+configuration parameters.
+
+New config.inc.php parameters:
+	- database.collation - The character set collation to use in database
+		queries. Default: utf8_general_ci
+	- email.smtp_suppress_cert_check - True if PHPMailer's certificate check
+		is to be disabled. Not recommended unless you're sure. Default: Off
+	- curl.cainfo - Path to Certificate Authority (CA) bundle.
+
+3.2.1-3 Build
+-------------
+	#6644: Fatal error if notifications are blocked for EditorialReportNotificationManager
+	#6632: Update Illuminate Database library for GHSA-3p32-j457-pg5x
+	#6620: WebFeed plugin missing restriction to published content
+	#6542: Fix pull forward of submission stages files into Internal Review
+	#6529: Author can not upload revisions when decision is to resubmit for review
+	#6508: OMP download statistics chart uses wrong id
+	#6495: Incorrect URLs in default context settings
+	#6473: Allow for access to public Library Files without forcing a download
+	#6467: "Reload defaults" for language invalidates $contextPath variable
+	#6462: Inconsistency in JWT (API key) encoding/decoding
+	#6460: Error editing identification code in OMP
+	#6421: Dependent file upload fails when confirm revision is detected
+	#6344: Remove script host from smarty variables
+	#6189: Problem when submitting reviews
+	#6060: If a title prefix is given for a single locale, it is shown with all article title translations
+	#4414: Context path property creates conflict when disable_path_info is enabled
+
 3.2.1-2 Build
 -------------
 	#4991: Add Category to submission page
