--- a/docs/release-notes/README-3.2.1
+++ b/docs/release-notes/README-3.2.1
@@ -1,8 +1,79 @@
-OMP 3.2.1 Release Notes
-Git tag: 3_2_1-0
+OMP 3.2.1-2 Release Notes
+Git tag: 3_2_1-2
 
-Release date: June 19, 2020
-===========================
+Release date: November 13, 2020
+===============================
+
+See config.TEMPLATE.inc.php for a description and examples of all supported
+configuration parameters.
+
+New config.inc.php parameters:
+	- database.collation - The character set collation to use in database
+		queries. Default: utf8_general_ci
+	- email.smtp_suppress_cert_check - True if PHPMailer's certificate check
+		is to be disabled. Not recommended unless you're sure. Default: Off
+	- curl.cainfo - Path to Certificate Authority (CA) bundle.
+
+3.2.1-3 Build
+-------------
+	#6644: Fatal error if notifications are blocked for EditorialReportNotificationManager
+	#6632: Update Illuminate Database library for GHSA-3p32-j457-pg5x
+	#6620: WebFeed plugin missing restriction to published content
+	#6542: Fix pull forward of submission stages files into Internal Review
+	#6529: Author can not upload revisions when decision is to resubmit for review
+	#6508: OMP download statistics chart uses wrong id
+	#6495: Incorrect URLs in default context settings
+	#6473: Allow for access to public Library Files without forcing a download
+	#6467: "Reload defaults" for language invalidates $contextPath variable
+	#6462: Inconsistency in JWT (API key) encoding/decoding
+	#6460: Error editing identification code in OMP
+	#6421: Dependent file upload fails when confirm revision is detected
+	#6344: Remove script host from smarty variables
+	#6189: Problem when submitting reviews
+	#6060: If a title prefix is given for a single locale, it is shown with all article title translations
+	#4414: Context path property creates conflict when disable_path_info is enabled
+
+3.2.1-2 Build
+-------------
+	#4991: Add Category to submission page
+	#5179: Submission landing page should adjust heading levels hierachy
+	#5445: Test licenseUrl context setting
+	#5592: Block plugins and cacheing problem
+	#6029: Report Generator doesn't return any results when custom range is selected with a single day
+	#6056: Version number showing Publication ID for authors
+	#6064: Text color does not respond to background color selection on mobile
+	#6067: Submission Checklist - Reordering doesn't save
+	#6081: Catalog links to the wrong monograph and breaks format
+	#6084: Announcement emails sent blank after upgrade
+	#6105: Allow capital letters in context urlPath
+	#6115: Enable "download all files" in production ready files grid
+	#6120: OMP Internal Review queries are placed in External Review
+	#6134: The statistics notification is sent to roles that have no access to the interface
+	#6146: Allow submission search by ORCID ID
+	#6148: Error for custom blocks in side bar due to automatic name addition
+	#6165: Announcement mailout can fail if any user is unsubscribed from notifications
+	#6168: ANNOUNCEMENT email template not installed on upgrade to 3.2.1
+	#6184: Can't use array values in theme options
+	#6196: Fix test/build for changed Google closure compiler installation process
+	#6213: Error in upgrade from 3.1.x to 3.2.x on submissionSubject (controlled vocabulary) data
+	#6216: Null value in column setting_type during Upgrade::migrateSubmissionCoverImages
+	#6226: CSRF checks missing from import/export plugin upload bounce requests
+	#6246: Let iframe use relative URL instead of absolute
+	#6257: Refactor submission file policies
+	#6262: Broken catalog page in OMP with PostgreSQL
+	#6265: New sample file for Native Import/export
+	#6269: Submission Hyperlink
+	#6300: PHP warning with cancelled reviews
+	#6301: Add indexes for search performance
+
+
+3.2.1-1 Build
+-------------
+	#6045: Permit database collation configuration
+	#6041: License override formatting error
+	#6035: Plugin install does not work across filesystems
+	#6033: Announcements can be viewed even when disabled
+	#6007: User roles can be passed to the browser as an object instead of array
 
 New Features
 ------------
