--- a/locale/en_US/manager.po
+++ b/locale/en_US/manager.po
@@ -1110,3 +1110,9 @@ msgstr "The specified objects could not be found."
 
 msgid "plugins.importexport.native.error.unknownUser"
 msgstr "The specified user, \"{$userName}\", does not exist."
+
+msgid "plugins.importexport.publicationformat.exportFailed"
+msgstr "Process failed to parse publicationformats"
+
+msgid "plugins.importexport.chapter.exportFailed"
+msgstr "Process failed to parse chapters"
