--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -191,6 +191,15 @@ msgstr "This format will be available at a separate website"
 msgid "grid.catalogEntry.remoteURL"
 msgstr "URL of remotely-hosted content"
 
+msgid "grid.catalogEntry.isbn"
+msgstr "ISBN"
+
+msgid "grid.catalogEntry.isbn13.description"
+msgstr "ISBN 13, for example 978-951-98548-9-2"
+
+msgid "grid.catalogEntry.isbn10.description"
+msgstr "ISBN 10, for example 951-98548-9-4"
+
 msgid "grid.catalogEntry.monographRequired"
 msgstr "A monograph id is required."
 
