--- a/plugins/themes/default/locale/en_US/locale.po
+++ b/plugins/themes/default/locale/en_US/locale.po
@@ -58,3 +58,12 @@ msgstr "When a homepage image has been uploaded, display it in the background of
 
 msgid "plugins.themes.default.option.useHomepageImageAsHeader.option"
 msgstr "Show the homepage image as the header background."
+
+msgid "plugins.themes.default.option.showCatalogueSeriesListing.label"
+msgstr "Catalogue Series Listing"
+
+msgid "plugins.themes.default.option.showCatalogueSeriesListing.description"
+msgstr "When enabled a list of existing Series will be shown on the top of the Catalogue page with links leading to the Series archive page."
+
+msgid "plugins.themes.default.option.showCatalogueSeriesListing.option"
+msgstr "Enable Series listing in Catalogue page."
