--- a/plugins/themes/default/locale/en_US/locale.po
+++ b/plugins/themes/default/locale/en_US/locale.po
@@ -60,10 +60,7 @@ msgid "plugins.themes.default.option.useHomepageImageAsHeader.option"
 msgstr "Show the homepage image as the header background."
 
 msgid "plugins.themes.default.option.showCatalogSeriesListing.label"
-msgstr "Catalog Series Listing"
-
-msgid "plugins.themes.default.option.showCatalogSeriesListing.description"
-msgstr "When enabled a list of existing Series will be shown on the top of the Catalog page with links leading to the Series archive page."
+msgstr "Show Series"
 
 msgid "plugins.themes.default.option.showCatalogSeriesListing.option"
-msgstr "Enable Series listing in Catalog page."
+msgstr "Add list of links to all of the press's series on the catalog page"
