pkp/pkp-lib#7132 Added chapter landing pages

--- a/locale/en_US/locale.po
+++ b/locale/en_US/locale.po
@@ -1454,3 +1454,6 @@ msgstr "An invalid published submission was specified."
 
 msgid "catalog.coverImageTitle"
 msgstr "Cover Image"
+
+msgid "grid.catalogEntry.chapters"
+msgstr "Chapters"
